# defensivemidfield_attribute-profiling

./: .gitignore  README.md  main.py  pyproject.toml  selected_features.md
models/: wyscout_England_Manchester_United_full-match_lasso_model.pkl  wyscout_England_Manchester_United_full-match_mlr_model.pkl  wyscout_England_Manchester_United_full-match_ridge_model.pkl  wyscout_Spain_Barcelona_full-match_lasso_model.pkl  wyscout_Spain_Barcelona_full-match_mlr_model.pkl  wyscout_Spain_Barcelona_full-match_ridge_model.pkl  wyscout_Spain_Barcelona_lasso_model.pkl  wyscout_Spain_Barcelona_mlr_model.pkl  wyscout_Spain_Barcelona_ridge_model.pkl  wyscout_Spain_lasso_model.pkl  wyscout_Spain_mlr_model.pkl  wyscout_Spain_ridge_model.pkl
notebooks/: Best_player.ipynb  Best_player_out.ipynb  EDA.ipynb  EDA2.ipynb  feature_selection.ipynb  model_building.ipynb  model_building_out.ipynb
production/: README.md
production/backend/: config.py  pyproject.toml
production/backend/api/: dependencies.py  main.py  unicode_utils.py
production/backend/api/routers/: best_model.py  eda.py  feature_selection.py  ingestion.py  model_building.py  replacement.py
production/backend/schemas/: best_model.py  eda.py  feature_selection.py  ingestion.py  model_building.py  replacement.py
production/backend/services/: best_model_service.py  eda_service.py  feature_selection_service.py  ingestion_service.py  model_service.py  replacement_service.py  task_store.py
production/backend/workers/: pipeline_worker.py
scripts/: download_statsbomb_data.py  download_wyscout.py  extract_barcelona_matches.py  (+8 more)
(+64 files in other folders)
